// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPreview /> renders correctly and highlighted 1`] = `
<div
  className="d-flex flex-1-1 event block--bordered highlighted-comment"
>
  <ForwardRef(Relay(EventImage))
    enabled={false}
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": Object {
          "$fragmentRefs": null,
          "username": "toto",
        },
        "googleMapsAddress": Object {
          "formatted": "21 rue george 5, 75012 Paris",
        },
        "id": "event1",
        "themes": Array [
          Object {
            "title": "Le gouter c'est la vie",
            "url": "https://estcequecestbientotlheuredugouter.neocities.org/",
          },
        ],
        "timeRange": Object {
          "endAt": "2019-09-27T03:00:00+01:00",
          "startAt": "2018-09-27T03:00:00+01:00",
        },
        "title": "Un super evenement",
        "url": "http://impossible.com",
      }
    }
  />
  <div
    className="d-flex event__infos"
  >
    <div
      className="event__date hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="event__body event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      >
        <ForwardRef(Relay(Connect(UserAvatar)))
          size={16}
          user={
            Object {
              "$fragmentRefs": null,
              "username": "toto",
            }
          }
        />
        <span
          className="font-weight-semi-bold"
        >
          toto
        </span>
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          day="numeric"
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          hour="numeric"
          minute="numeric"
          month="long"
          second="numeric"
          showCurrentYear={true}
          startAt="2018-09-27T03:00:00+01:00"
          year="numeric"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          margin={true}
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EventPreview /> renders correctly and not highlighted 1`] = `
<div
  className="d-flex flex-1-1 event block--bordered "
>
  <ForwardRef(Relay(EventImage))
    enabled={false}
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": Object {
          "$fragmentRefs": null,
          "username": "toto",
        },
        "googleMapsAddress": Object {
          "formatted": "21 rue george 5, 75012 Paris",
        },
        "id": "event1",
        "themes": Array [
          Object {
            "title": "Le gouter c'est la vie",
            "url": "https://estcequecestbientotlheuredugouter.neocities.org/",
          },
        ],
        "timeRange": Object {
          "endAt": "2019-09-27T03:00:00+01:00",
          "startAt": "2018-09-27T03:00:00+01:00",
        },
        "title": "Un super evenement",
        "url": "http://impossible.com",
      }
    }
  />
  <div
    className="d-flex event__infos"
  >
    <div
      className="event__date hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="event__body event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      >
        <ForwardRef(Relay(Connect(UserAvatar)))
          size={16}
          user={
            Object {
              "$fragmentRefs": null,
              "username": "toto",
            }
          }
        />
        <span
          className="font-weight-semi-bold"
        >
          toto
        </span>
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          day="numeric"
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          hour="numeric"
          minute="numeric"
          month="long"
          second="numeric"
          showCurrentYear={true}
          startAt="2018-09-27T03:00:00+01:00"
          year="numeric"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          margin={true}
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EventPreview /> renders correctly without picture for user 1`] = `
<div
  className="d-flex flex-1-1 event block--bordered "
>
  <ForwardRef(Relay(EventImage))
    enabled={false}
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": Object {
          "$fragmentRefs": null,
          "username": "toto",
        },
        "googleMapsAddress": Object {
          "formatted": "21 rue george 5, 75012 Paris",
        },
        "id": "event1",
        "themes": Array [
          Object {
            "title": "Le gouter c'est la vie",
            "url": "https://estcequecestbientotlheuredugouter.neocities.org/",
          },
        ],
        "timeRange": Object {
          "endAt": "2019-09-27T03:00:00+01:00",
          "startAt": "2018-09-27T03:00:00+01:00",
        },
        "title": "Un super evenement",
        "url": "http://impossible.com",
      }
    }
  />
  <div
    className="d-flex event__infos"
  >
    <div
      className="event__date hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="event__body event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      >
        <ForwardRef(Relay(Connect(UserAvatar)))
          size={16}
          user={
            Object {
              "$fragmentRefs": null,
              "username": "toto",
            }
          }
        />
        <span
          className="font-weight-semi-bold"
        >
          toto
        </span>
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          day="numeric"
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          hour="numeric"
          minute="numeric"
          month="long"
          second="numeric"
          showCurrentYear={true}
          startAt="2018-09-27T03:00:00+01:00"
          year="numeric"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          margin={true}
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EventPreview /> renders without username 1`] = `
<div
  className="d-flex flex-1-1 event block--bordered "
>
  <ForwardRef(Relay(EventImage))
    enabled={false}
    event={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "author": Object {
          "$fragmentRefs": null,
          "username": "toto",
        },
        "googleMapsAddress": Object {
          "formatted": "21 rue george 5, 75012 Paris",
        },
        "id": "event1",
        "themes": Array [
          Object {
            "title": "Le gouter c'est la vie",
            "url": "https://estcequecestbientotlheuredugouter.neocities.org/",
          },
        ],
        "timeRange": Object {
          "endAt": "2019-09-27T03:00:00+01:00",
          "startAt": "2018-09-27T03:00:00+01:00",
        },
        "title": "Un super evenement",
        "url": "http://impossible.com",
      }
    }
  />
  <div
    className="d-flex event__infos"
  >
    <div
      className="event__date hidden-xs"
    >
      <DateIcon
        startAt="2018-09-27T03:00:00+01:00"
      />
    </div>
    <div
      className="event__body event-js"
    >
      <h3
        className="event__title"
      >
        <a
          href="http://impossible.com"
          title="Un super evenement"
        >
          Un super evenement
        </a>
      </h3>
      <p
        className="excerpt"
      >
        <ForwardRef(Relay(Connect(UserAvatar)))
          size={16}
          user={
            Object {
              "$fragmentRefs": null,
              "username": "toto",
            }
          }
        />
        <span
          className="font-weight-semi-bold"
        >
          toto
        </span>
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-calendar-1 mr-10"
        />
        <DatesInterval
          day="numeric"
          endAt="2019-09-27T03:00:00+01:00"
          fullDay={true}
          hour="numeric"
          minute="numeric"
          month="long"
          second="numeric"
          showCurrentYear={true}
          startAt="2018-09-27T03:00:00+01:00"
          year="numeric"
        />
      </p>
      <p
        className="excerpt"
      >
        <i
          className="cap-marker-1 mr-10"
        />
        21 rue george 5, 75012 Paris
      </p>
      <div
        className="excerpt"
      >
        <i
          className="cap cap-folder-2 mr-10 r-0"
        />
        <InlineList
          className="d-i"
          margin={true}
          separator=","
        >
          <li
            key="0"
          >
            <a
              href="https://estcequecestbientotlheuredugouter.neocities.org/"
              title="Le gouter c'est la vie"
            >
              Le gouter c'est la vie
            </a>
          </li>
        </InlineList>
      </div>
    </div>
  </div>
</div>
`;
